--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "deta": "^1.1.0",
     "eslint-config-prettier": "^8.7.0",
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
